[gd_scene load_steps=8 format=3 uid="uid://bbmudmotbdy1b"]

[ext_resource type="Script" path="res://assets/props/pedestal.gd" id="1_8t703"]
[ext_resource type="Material" uid="uid://mek8rus6link" path="res://assets/props/Metal045.tres" id="1_fxdgk"]
[ext_resource type="Material" uid="uid://bkorf4g4jdnpo" path="res://assets/props/pedestal.tres" id="2_rs8i7"]
[ext_resource type="PackedScene" uid="uid://ddkgqxdf1rj6g" path="res://assets/props/snap_spawn.tscn" id="4_umtyr"]
[ext_resource type="AudioStream" uid="uid://dv3tlsmg40f6a" path="res://assets/sounds/sfx100v2_misc_23.ogg" id="6_yjjf2"]

[sub_resource type="CylinderMesh" id="CylinderMesh_t7cub"]
material = ExtResource("1_fxdgk")
top_radius = 0.21
bottom_radius = 0.21
height = 0.04

[sub_resource type="CylinderMesh" id="CylinderMesh_eysfi"]
material = ExtResource("2_rs8i7")
top_radius = 0.2
bottom_radius = 0.2
height = 0.4
cap_top = false
cap_bottom = false

[node name="Pedestal" type="Node3D"]
script = ExtResource("1_8t703")

[node name="Bottom" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.02, 0)
mesh = SubResource("CylinderMesh_t7cub")

[node name="Cylinder" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.22, 0)
mesh = SubResource("CylinderMesh_eysfi")

[node name="SnapSpawn" parent="." instance=ExtResource("4_umtyr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.12, 0)
snap_mode = 1

[node name="AudioDespawn" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_yjjf2")

[connection signal="has_dropped" from="SnapSpawn" to="." method="_on_snap_spawn_has_dropped"]
[connection signal="has_picked_up" from="SnapSpawn" to="." method="_on_snap_spawn_has_picked_up"]
